# overhear-digest

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml
config/: digest.yaml
src/overhear_digest/: __init__.py  categories.py  compile_openclaw.py  config.py  deadlines.py  fetch_contracts.py  fetch_rss.py  fetch_search.py  filters.py  history.py  main.py  models.py  pipeline.py  relevance.py  render.py  render_openclaw.py  score.py  send_email.py  textutil.py
templates/: digest.html.j2  digest.txt.j2  openclaw.html.j2  openclaw.txt.j2
