[project]
name = "overhear-digest"
version = "0.1.0"
description = "Daily RSS + web-search digest for OVERHEAR Ltd, emailed via Resend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
overhear-digest = "overhear_digest.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
